src/z80asm-pp/lex.cpp
/* Generated by re2c 1.3 */
//-----------------------------------------------------------------------------
// z80asm preprocessor
// Copyright (C) Paulo Custodio, 2011-2021
// License: GPL3 https://www.gnu.org/licenses/gpl-3.0.html
//-----------------------------------------------------------------------------

#include "error.h"
#include "lex.h"
#include "option.h"
#include "utils.h"
#include <cctype>
#include <unordered_map>
using namespace std;



static unordered_map<string, Keyword> keyword_table = {
#	define X(id, text)		{ text, Keyword::id },
#	include "keyword.def"
};

static int a2i(const char* str, int base) {
    return (int)strtol(str, NULL, base);
}

static Keyword lu_keyword(const string& text) {
    auto it = keyword_table.find(str_tolower(text));
    if (it == keyword_table.end())
        return Keyword::None;
    else
        return it->second;
}

Token& Lexer::operator[](int offset) {
    return peek(offset);
}

Token& Lexer::peek(int offset) {
    static Token end{ TType::End };
    size_t index = m_pos + offset;
    if (index >= m_tokens.size())
        return end;
    else
        return m_tokens[index];
}

void Lexer::next() {
    if (m_pos < m_tokens.size())
        m_pos++;
}

void Lexer::set(const string& text) {
    m_text = text;
    m_tokens.clear();
    m_pos = 0;
    const char* p = text.c_str(), * YYMARKER{ nullptr };
    while (true) {
        const char* p0{ p }, * p1{ nullptr }, * p2{ nullptr }, * yyt1{ nullptr };
        size_t col = p - text.c_str();
        bool first_token = m_tokens.empty();
        
		{
			char yych;
			unsigned int yyaccept = 0;
			yych = *p;
			switch (yych) {
			case 0x00:	goto yy2;
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy6;
			case '\n':	goto yy9;
			case '!':	goto yy11;
			case '"':	goto yy13;
			case '#':	goto yy14;
			case '$':	goto yy16;
			case '%':	goto yy18;
			case '&':	goto yy20;
			case '\'':	goto yy22;
			case '(':	goto yy23;
			case ')':	goto yy25;
			case '*':	goto yy27;
			case '+':	goto yy29;
			case ',':	goto yy31;
			case '-':	goto yy33;
			case '.':	goto yy35;
			case '/':	goto yy37;
			case '0':	goto yy39;
			case '1':	goto yy41;
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy43;
			case ':':	goto yy45;
			case ';':	goto yy47;
			case '<':	goto yy49;
			case '=':	goto yy51;
			case '>':	goto yy53;
			case '?':	goto yy55;
			case '@':	goto yy57;
			case 'A':
			case 'a':	goto yy58;
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'b':
			case 'c':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy60;
			case 'D':
			case 'd':	goto yy62;
			case '[':	goto yy63;
			case '\\':	goto yy65;
			case ']':	goto yy67;
			case '^':	goto yy69;
			case '{':	goto yy71;
			case '|':	goto yy73;
			case '}':	goto yy75;
			case '~':	goto yy77;
			default:	goto yy4;
			}
yy2:
			++p;
			{ return; }
yy4:
			++p;
yy5:
			{ throw Error(ECode::InvalidChar); }
yy6:
			yych = *++p;
			switch (yych) {
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy6;
			default:	goto yy8;
			}
yy8:
			{ continue; }
yy9:
			++p;
			{ m_tokens.emplace_back(TType::Newline);
        					  m_tokens.back().col = col;
        					  continue; }
yy11:
			yych = *++p;
			switch (yych) {
			case '=':	goto yy79;
			default:	goto yy12;
			}
yy12:
			{ m_tokens.emplace_back(TType::LogNot);
        					  m_tokens.back().col = col;
        					  continue; }
yy13:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case 0x00:
			case '\n':
			case '\r':	goto yy5;
			case '"':
				yyt1 = p;
				goto yy84;
			case '\\':
				yyt1 = p;
				goto yy86;
			default:
				yyt1 = p;
				goto yy81;
			}
yy14:
			yych = *++p;
			switch (yych) {
			case '#':	goto yy88;
			default:	goto yy15;
			}
yy15:
			{ m_tokens.emplace_back(TType::Hash);
        					  m_tokens.back().col = col;
        					  continue; }
yy16:
			yych = *++p;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':	goto yy90;
			default:	goto yy17;
			}
yy17:
			{ m_tokens.emplace_back(TType::ASMPC);
        					  m_tokens.back().col = col;
        					  continue; }
yy18:
			yyaccept = 1;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '"':	goto yy93;
			case '0':
			case '1':	goto yy95;
			default:	goto yy19;
			}
yy19:
			{ m_tokens.emplace_back(TType::Mod);
        					  m_tokens.back().col = col;
        					  continue; }
yy20:
			yych = *++p;
			switch (yych) {
			case '&':	goto yy98;
			default:	goto yy21;
			}
yy21:
			{ m_tokens.emplace_back(TType::BinAnd);
        					  m_tokens.back().col = col;
        					  continue; }
yy22:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case 0x00:
			case '\n':
			case '\r':	goto yy5;
			case '\'':
				yyt1 = p;
				goto yy102;
			case '\\':
				yyt1 = p;
				goto yy104;
			default:
				yyt1 = p;
				goto yy100;
			}
yy23:
			++p;
			{ m_tokens.emplace_back(TType::Lparen);
        					  m_tokens.back().col = col;
        					  continue; }
yy25:
			++p;
			{ m_tokens.emplace_back(TType::Rparen);
        					  m_tokens.back().col = col;
        					  continue; }
yy27:
			yych = *++p;
			switch (yych) {
			case '*':	goto yy106;
			default:	goto yy28;
			}
yy28:
			{ m_tokens.emplace_back(TType::Mul);
        					  m_tokens.back().col = col;
        					  continue; }
yy29:
			yyaccept = 2;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy108;
			default:	goto yy30;
			}
yy30:
			{ m_tokens.emplace_back(TType::Plus);
        					  m_tokens.back().col = col;
        					  continue; }
yy31:
			++p;
			{ m_tokens.emplace_back(TType::Comma);
        					  m_tokens.back().col = col;
        					  continue; }
yy33:
			yyaccept = 3;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy108;
			default:	goto yy34;
			}
yy34:
			{ m_tokens.emplace_back(TType::Minus);
        					  m_tokens.back().col = col;
        					  continue; }
yy35:
			yyaccept = 4;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy110;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy112;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				yyt1 = p;
				goto yy115;
			default:	goto yy36;
			}
yy36:
			{ m_tokens.emplace_back(TType::Dot);
        					  m_tokens.back().col = col;
        					  continue; }
yy37:
			++p;
			{ m_tokens.emplace_back(TType::Div);
        					  m_tokens.back().col = col;
        					  continue; }
yy39:
			yyaccept = 5;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case 'B':
			case 'b':	goto yy120;
			case 'X':
			case 'x':	goto yy125;
			default:	goto yy42;
			}
yy40:
			{ m_tokens.emplace_back(TType::Integer, a2i(p0, 10));
        					  m_tokens.back().col = col;
        					  continue; }
yy41:
			yyaccept = 5;
			yych = *(YYMARKER = ++p);
yy42:
			switch (yych) {
			case '.':	goto yy112;
			case '0':
			case '1':	goto yy41;
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy43;
			case 'A':
			case 'C':
			case 'E':
			case 'F':
			case 'a':
			case 'c':
			case 'e':
			case 'f':	goto yy118;
			case 'B':
			case 'b':	goto yy126;
			case 'D':
			case 'd':	goto yy122;
			case 'H':
			case 'h':	goto yy123;
			default:	goto yy40;
			}
yy43:
			yyaccept = 5;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '.':	goto yy112;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy43;
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'f':	goto yy118;
			case 'D':
			case 'd':	goto yy122;
			case 'H':
			case 'h':	goto yy123;
			default:	goto yy40;
			}
yy45:
			++p;
			{ m_tokens.emplace_back(TType::Colon);
        					  m_tokens.back().col = col;
        					  continue; }
yy47:
			++p;
			{ return; }
yy49:
			yych = *++p;
			switch (yych) {
			case '<':	goto yy127;
			case '=':	goto yy129;
			case '>':	goto yy79;
			default:	goto yy50;
			}
yy50:
			{ m_tokens.emplace_back(TType::Lt);
        					  m_tokens.back().col = col;
        					  continue; }
yy51:
			yych = *++p;
			switch (yych) {
			case '=':	goto yy131;
			default:	goto yy52;
			}
yy52:
			{ m_tokens.emplace_back(TType::Eq);
        					  m_tokens.back().col = col;
        					  continue; }
yy53:
			yych = *++p;
			switch (yych) {
			case '=':	goto yy132;
			case '>':	goto yy134;
			default:	goto yy54;
			}
yy54:
			{ m_tokens.emplace_back(TType::Gt);
        					  m_tokens.back().col = col;
        					  continue; }
yy55:
			++p;
			{ m_tokens.emplace_back(TType::Quest);
        					  m_tokens.back().col = col;
        					  continue; }
yy57:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '"':	goto yy93;
			case '0':
			case '1':	goto yy95;
			default:	goto yy5;
			}
yy58:
			yyaccept = 6;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case 'F':
			case 'f':	goto yy140;
			default:	goto yy61;
			}
yy59:
			p1 = p;
			{ string str = ident_change_case(string(p0, p1));
        					  Keyword keyword = lu_keyword(str);
        					  m_tokens.emplace_back(TType::Ident, str, keyword);
        					  m_tokens.back().col = col;
        					  continue; }
yy60:
			yyaccept = 6;
			yych = *(YYMARKER = ++p);
yy61:
			switch (yych) {
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':
				yyt1 = p;
				goto yy136;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy60;
			case ':':
				yyt1 = p;
				goto yy138;
			default:	goto yy59;
			}
yy62:
			yyaccept = 6;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case 'S':
			case 's':	goto yy141;
			default:	goto yy61;
			}
yy63:
			++p;
			{ m_tokens.emplace_back(TType::Lsquare);
        					  m_tokens.back().col = col;
        					  continue; }
yy65:
			++p;
			{ m_tokens.emplace_back(TType::Backslash);
        					  m_tokens.back().col = col;
        					  continue; }
yy67:
			++p;
			{ m_tokens.emplace_back(TType::Rsquare);
        					  m_tokens.back().col = col;
        					  continue; }
yy69:
			yych = *++p;
			switch (yych) {
			case '^':	goto yy142;
			default:	goto yy70;
			}
yy70:
			{ m_tokens.emplace_back(TType::BinXor);
        					  m_tokens.back().col = col;
        					  continue; }
yy71:
			++p;
			{ m_tokens.emplace_back(TType::Lbrace);
        					  m_tokens.back().col = col;
        					  continue; }
yy73:
			yych = *++p;
			switch (yych) {
			case '|':	goto yy144;
			default:	goto yy74;
			}
yy74:
			{ m_tokens.emplace_back(TType::BinOr);
        					  m_tokens.back().col = col;
        					  continue; }
yy75:
			++p;
			{ m_tokens.emplace_back(TType::Rbrace);
        					  m_tokens.back().col = col;
        					  continue; }
yy77:
			++p;
			{ m_tokens.emplace_back(TType::BinNot);
        					  m_tokens.back().col = col;
        					  continue; }
yy79:
			++p;
			{ m_tokens.emplace_back(TType::Ne);
        					  m_tokens.back().col = col;
        					  continue; }
yy81:
			yych = *++p;
			switch (yych) {
			case 0x00:
			case '\n':
			case '\r':	goto yy83;
			case '"':	goto yy84;
			case '\\':	goto yy86;
			default:	goto yy81;
			}
yy83:
			p = YYMARKER;
			switch (yyaccept) {
			case 0: 	goto yy5;
			case 1: 	goto yy19;
			case 2: 	goto yy30;
			case 3: 	goto yy34;
			case 4: 	goto yy36;
			case 5: 	goto yy40;
			case 6: 	goto yy59;
			case 7: 	goto yy114;
			case 8: 	goto yy121;
			case 9: 	goto yy85;
			case 10: 	goto yy103;
			default:	goto yy153;
			}
yy84:
			++p;
yy85:
			p1 = yyt1;
			p2 = p - 1;
			{
        					  string str = str_compress_escapes(string(p1, p2));
        					  m_tokens.emplace_back(TType::String, str);
        					  m_tokens.back().col = col;
        					  continue; }
yy86:
			yych = *++p;
			switch (yych) {
			case 0x00:
			case '\n':
			case '\r':	goto yy83;
			case '"':	goto yy146;
			case '\\':	goto yy86;
			default:	goto yy81;
			}
yy88:
			++p;
			{ m_tokens.emplace_back(TType::DblHash);
        					  m_tokens.back().col = col;
        					  continue; }
yy90:
			yych = *++p;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':	goto yy90;
			default:	goto yy92;
			}
yy92:
			{ m_tokens.emplace_back(TType::Integer, a2i(p0+1, 16));
        					  m_tokens.back().col = col;
        					  continue; }
yy93:
			yych = *++p;
			switch (yych) {
			case '"':	goto yy147;
			case '#':
			case '-':	goto yy93;
			default:	goto yy83;
			}
yy95:
			yych = *++p;
			switch (yych) {
			case '0':
			case '1':	goto yy95;
			default:	goto yy97;
			}
yy97:
			{ m_tokens.emplace_back(TType::Integer, a2i(p0+1, 2));
        					  m_tokens.back().col = col;
        					  continue; }
yy98:
			++p;
			{ m_tokens.emplace_back(TType::LogAnd);
        					  m_tokens.back().col = col;
        					  continue; }
yy100:
			yych = *++p;
			switch (yych) {
			case 0x00:
			case '\n':
			case '\r':	goto yy83;
			case '\'':	goto yy102;
			case '\\':	goto yy104;
			default:	goto yy100;
			}
yy102:
			++p;
yy103:
			p1 = yyt1;
			p2 = p - 1;
			{
        					  string str = str_compress_escapes(string(p1, p2));
        					  if (str.length() != 1)
        						  throw Error(ECode::InvalidSingleQuotedChar);
        					  m_tokens.emplace_back(TType::Integer, str[0]);
        					  m_tokens.back().col = col;
        					  continue; }
yy104:
			yych = *++p;
			switch (yych) {
			case 0x00:
			case '\n':
			case '\r':	goto yy83;
			case '\'':	goto yy149;
			case '\\':	goto yy104;
			default:	goto yy100;
			}
yy106:
			++p;
			{ m_tokens.emplace_back(TType::Pow);
        					  m_tokens.back().col = col;
        					  continue; }
yy108:
			yych = *++p;
			switch (yych) {
			case '.':	goto yy112;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy108;
			default:	goto yy83;
			}
yy110:
			yych = *++p;
			switch (yych) {
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy110;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				yyt1 = p;
				goto yy115;
			default:	goto yy83;
			}
yy112:
			yyaccept = 7;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy112;
			case 'E':
			case 'e':	goto yy150;
			default:	goto yy114;
			}
yy114:
			{ m_tokens.emplace_back(TType::Floating, atof(p0));
        					  m_tokens.back().col = col;
        					  continue; }
yy115:
			yych = *++p;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy115;
			default:	goto yy117;
			}
yy117:
			p1 = yyt1;
			p2 = p;
			{
        					  if (first_token) {
        					      string str = ident_change_case(string(p1, p2));
        						  m_tokens.emplace_back(TType::Label, str);
        					  }
        					  else {
        						  p = p0 + 1;
        					      m_tokens.emplace_back(TType::Dot);
        					  }
        					  m_tokens.back().col = col;
        					  continue; }
yy118:
			yych = *++p;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':	goto yy118;
			case 'H':
			case 'h':	goto yy123;
			default:	goto yy83;
			}
yy120:
			yyaccept = 8;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'H':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'h':	goto yy152;
			default:	goto yy121;
			}
yy121:
			{ m_tokens.emplace_back(TType::Integer, a2i(p0, 2));
        					  m_tokens.back().col = col;
        					  continue; }
yy122:
			yyaccept = 5;
			yych = *(YYMARKER = ++p);
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
